@@ -18,6 +18,7 @@ Bugs fixed:
 - 3023502 Memory leak on CreateClass
 - 3022919 profileProvider (SLP) has increasing memory usage over time
 - 2952628 Handler is not removed from interop-Hashtable when CI fails
+- 3017845 disableIndications not called on provider shutdown
 
 Changes in 1.3.8
 ================
